docs: add 4-column comparison table to Why FastSIMD section